--- a/public/assets/furns/scss/_variabls.scss
+++ b/public/assets/furns/scss/_variabls.scss
@@ -12,11 +12,11 @@ sans-serif;
 $Ionicons:"Ionicons";
 $body-font: $open-sans;
 $heading-font: $raleway;
-//color 
+//color
 $white:#fff;
 $body-color:#474747;
 $heading-color:#212121;
-$theme-color:#ff7004;
+$theme-color:#e41c10;
 // Transition
 $baseTransition: all 0.3s ease 0s;
 // Socail Color
@@ -110,7 +110,7 @@ $black: #000;
 // fusv-disable
 $grays: ( "100": $gray-100, "200": $gray-200, "300": $gray-300, "400": $gray-400, "500": $gray-500, "600": $gray-600, "700": $gray-700, "800": $gray-800, "900": $gray-900, );
 // fusv-enable
-$blue: #ff7004;
+$blue: #e41c10;
 $indigo: #6610F2;
 $purple: #6F42C1;
 $pink: #D63384;
