--- a/public/assets/furns/scss/component/_button.scss
+++ b/public/assets/furns/scss/component/_button.scss
@@ -13,8 +13,8 @@
 }
 .btn-primary {
     color: #fff;
-    background-color: #ff7004;
-    border-color: #ff7004;
+    background-color: #e41c10;
+    border-color: #e41c10;
     border: 0;
     transition: $baseTransition;
     &:hover {
