--- a/public/assets/furn/css/custom.css
+++ b/public/assets/furn/css/custom.css
@@ -1,24 +1,180 @@
-/* your styles go here */
 
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
+form,fieldset,input,textarea,p,blockquote,th,td {
+    padding: 0;
+    margin: 0;
+}
 html, body {
-    width: 100%;
-    overflow-x: hidden;
-    font: 300 14px 'Montserrat';
+    /* width: 100%;
+    overflow-x: hidden; */
+    font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 500;
     color: #fff;
     position: relative;
     line-height: 1.6;
-    background: #111;
 }
-#myVideo {
+.menu {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height: 50px;
+}
+.navbar-nav > li {
+    padding: 0px 20px;
+}
+.navbar-nav > li > a {
+    text-align: left;
+}
+.navbar-brand {
+    padding: 0px 20px;
+}
+.dropdown-menu {
+    background-color: #343a40;
+}
+.dropdown-item {
+    color: white !important;
+}
+.dropdown-item:hover {
+    color: #343a40 !important;
+}
+.row {
+    margin: 0px !important;
+}
+.category-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 2;
+    opacity: 0.5;
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
+    -ms-transition: opacity 0.5s ease-in-out;
+    -o-transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
+}
+.category {
+    padding: 0px !important;
+    margin: 0px !important;
+    height: 100% !important;
+    cursor: pointer;
+    overflow: hidden;
+}
+.category:hover .category-overlay{
+    opacity: 0.3;
+}
+.category-text {
+    position: absolute;
+    z-index: 3;
+    /* left: 20px; */
+    bottom: 50px;
+    text-transform: uppercase;
+    width: 100%;
+}
+.category-text h2 {
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+@media only screen and (max-width: 540px){
+
+}
+@media only screen and (max-width: 720px){
+
+}
+@media only screen and (max-width: 960px){
+    .category {
+        height: 50% !important;
+    }
+}
+/* @media only screen and (max-width: 1140px){
+    #myVideo {
+        height: 100%;
+    }
+} */
+/*
+.category img {
+    height: 100%;
+    transition: transform 1s;
+    padding: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.category a {
+    width: 100%;
+    height: 100%;
+}
+.category-head .row {
+    position: absolute !important;
+    height: 100% !important;
+    padding: 0px !important;
+    margin: 0px !important;
+    width: 100%;
+}
+
+.category:hover .category-overlay{
+  opacity: 0;
+}
+.category:hover img{
+  transform: scale(1.1);
+}
+.category-text {
+  position: absolute;
+  z-index: 3;
+  left: 20px;
+  bottom: 50px;
+  text-transform: uppercase;
+} */
+
+
+
+
+
+
+
+
+
+
+
+/* #myVideo {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     display: block;
     object-fit: cover;
+    height: 100%;
 }
-.hero {
+
+@media only screen and (max-width: 540px){
+    #myVideo {
+        height: 100% !important;
+    }
+    .onepage-wrapper .section {
+        height: 50% !important;
+    }
+}
+@media only screen and (max-width: 720px){
+    #myVideo {
+        height: 100%;
+    }
+}
+@media only screen and (max-width: 960px){
+    #myVideo {
+        height: 100%;
+    }
+}
+@media only screen and (max-width: 1140px){
+    #myVideo {
+        height: 100%;
+    }
+} */
+/* .hero {
     background: none !important;
 }
 .logo {
@@ -63,8 +219,8 @@ html, body {
   font-weight: 400 !important;
   color: white !important;
   margin-right: 40px;
-}
-section {
+} */
+/* section {
     padding: 0px !important;
 }
 .category {
@@ -120,8 +276,9 @@ section {
   left: 20px;
   bottom: 50px;
   text-transform: uppercase;
-}
+} */
 
+/*
 .products {
   background-color: white !important;
   color: #999 !important;
@@ -174,4 +331,4 @@ section {
     margin-left: auto;
     margin-right: auto;
     height: 100%;
-}
+} */
