--- a/public/assets/furn/css/custom.css
+++ b/public/assets/furn/css/custom.css
@@ -88,6 +88,9 @@ html, body {
     .category {
         height: 50% !important;
     }
+    #category-second .category {
+        height: 33.33% !important;
+    }
 }
 /* @media only screen and (max-width: 1140px){
     #myVideo {
