--- a/public/assets/furn/css/custom.css
+++ b/public/assets/furn/css/custom.css
@@ -388,8 +388,9 @@ select:focus /* => from bootstrap css */
     font-weight: 600;
     color: #db5d5d;
 }
-.list-pictures-product img{
-    width: 50px !important;
-    height: 50px;
-    border-radius: 3px;
+.btn-add-order{
+    margin-right: 10px;
+}
+.control-label{
+    margin-left: 18px;
 }
